# pabigot-cxx

./: .dir-locals.el  .gitignore  CHANGELOG.md  README.md  annotated.html  ble_8hpp.html  ble_8hpp_source.html  byteorder_8hpp.html  byteorder_8hpp_source.html  ccbysa30_8hpp.html  ccbysa30_8hpp_source.html  classes.html  classpabigot_1_1ble_1_1details_1_1uuid__type.html  classpabigot_1_1ble_1_1gap_1_1adv__data.html  classpabigot_1_1ble_1_1gap_1_1adv__data_1_1store__helper.html  classpabigot_1_1ble_1_1uuid128__type.html  classpabigot_1_1ble_1_1uuid16__type.html  classpabigot_1_1ble_1_1uuid32__type.html  classpabigot_1_1byteorder_1_1octets__helper.html  classpabigot_1_1container_1_1forward__chain.html  classpabigot_1_1container_1_1forward__chain_1_1chain__iterator__type.html  classpabigot_1_1container_1_1forward__chain_1_1end__iterator__type.html  classpabigot_1_1container_1_1rr__adaptor.html  classpabigot_1_1crc_1_1Tabler.html  classpabigot_1_1crc_1_1crc.html  classpabigot_1_1crc_1_1details_1_1base__crc.html  common_8hpp.html  common_8hpp_source.html  container_8hpp.html  container_8hpp_source.html  crc_8hpp.html  crc_8hpp_source.html  dir_69d8608877e05c6b37cc8c3d6efe0717.html  dir_8f2980731aba7ec7b9fcae5764f196e3.html  dir_ac0012af84b0877c652019989bf36ef0.html  dir_c37ddb76920e3e356a16c502489b1dff.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e68e8157741866f444e17edd764ebbae.html  dir_f10e6f05ea2dee55342f82322a23fb11.html  files.html  (+37 more)
doc/: .gitignore  code-practices.md  doxygen.cfg.in  mainpage.dox  meson.build  progopt.txt
examples/: crc.cc  meson.build
include/: meson.build
include/pabigot/: ble.hpp  byteorder.hpp  common.hpp.in  container.hpp  crc.hpp  meson.build
include/pabigot/ble/: gap.hpp  meson.build
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+49 more)
src/: ble-gap.cc  ble.cc  meson.build
subprojects/: .gitignore
tests/: .gitignore  gt_ble-gap.cc  gt_ble.cc  gt_byteorder.cc  gt_container.cc  gt_crc.cc  meson.build
