# SPDX-License-Identifier: CC0-1.0
# Written in 2018-2019 by Peter A. Bigot

option('googletest',
       type: 'boolean',
       value: true,
       description: 'Attempt to build and enable GoogleTest')

# fullcpp false excludes dependencies on:
# * <memory>
# * <exception>
# * <chrono>
# * virtual functions, dynamic_cast, runtime type inference
# * <thread>
option('fullcpp',
        type: 'boolean',
        value: 'true',
        description: 'Enable features that require full C++ support')
# support means things that help people use the library.
# This might be disabled when used as a subproject.
option('support',
       type: 'boolean',
       value: true,
       description: 'Attempt to build examples, documentation, etc.')
